# kaspa-miner

./: Cargo.toml
.github/workflows/: ci.yaml  deploy.yaml
hiveos/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
plugins/cuda/: Cargo.toml
plugins/cuda/kaspa-cuda-native/src/: kaspa-cuda.cu  keccak-tiny.c  stdint.h  xoshiro256starstar.c
plugins/cuda/src/: cli.rs  lib.rs  worker.rs
plugins/opencl/src/: worker.rs
plugins/uart/: Cargo.toml
plugins/uart/src/: cli.rs  lib.rs  worker.rs
src/: lib.rs  main.rs  miner.rs  pow.rs
src/client/: stratum.rs
